--- a/public/bower.json
+++ b/public/bower.json
@@ -1,9 +1,9 @@
 {
   "name": "vitush-frontend",
   "devDependencies": {
-    "jquery": "~2",
-    "foundation": "zurb/bower-foundation",
-    "handlebars": "~3.0.3",
-    "underscore": "~1.8.3"
+    "jquery": "2.1.4",
+    "foundation-sites": "v5.5.3",
+    "handlebars": "3.0.3",
+    "underscore": "1.8.3"
   }
 }
