--- a/public/bower.json
+++ b/public/bower.json
@@ -4,6 +4,7 @@
     "jquery": "2.1.4",
     "foundation-sites": "v5.5.3",
     "handlebars": "3.0.3",
-    "underscore": "1.8.3"
+    "underscore": "1.8.3",
+    "font-awesome": "v4.5.0"
   }
 }
