--- a/public/bower.json
+++ b/public/bower.json
@@ -6,5 +6,8 @@
     "handlebars": "3.0.3",
     "underscore": "1.8.3",
     "font-awesome": "v4.5.0"
+  },
+  "dependencies": {
+    "lightbox2": "~2.8.2"
   }
 }
